--- a/feed-publisher-jdbc/pom.xml
+++ b/feed-publisher-jdbc/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>feed</artifactId>
-        <groupId>no.skatteetaten.fastsetting.formueinntekt.felles.feed</groupId>
+        <groupId>codes.rafael.feed</groupId>
         <version>0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -46,7 +46,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>no.skatteetaten.fastsetting.formueinntekt.felles.feed</groupId>
+            <groupId>codes.rafael.feed</groupId>
             <artifactId>feed-api</artifactId>
             <version>${project.version}</version>
         </dependency>
