--- a/feed-client-filesystem/pom.xml
+++ b/feed-client-filesystem/pom.xml
@@ -4,29 +4,29 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>no.skatteetaten.fastsetting.formueinntekt.felles.feed</groupId>
+        <groupId>codes.rafael.feed</groupId>
         <artifactId>feed</artifactId>
-        <version>0-SNAPSHOT</version>
+        <version>1.5-SNAPSHOT</version>
     </parent>
 
     <artifactId>feed-client-filesystem</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>no.skatteetaten.fastsetting.formueinntekt.felles.feed</groupId>
+            <groupId>codes.rafael.feed</groupId>
             <artifactId>feed-api</artifactId>
             <version>${project.version}</version>
         </dependency>
 
         <dependency>
-            <groupId>no.skatteetaten.fastsetting.formueinntekt.felles.feed</groupId>
+            <groupId>codes.rafael.feed</groupId>
             <artifactId>feed-reader</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
-            <groupId>no.skatteetaten.fastsetting.formueinntekt.felles.feed</groupId>
+            <groupId>codes.rafael.feed</groupId>
             <artifactId>feed-memory</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
