--- a/feed-client-publisher/pom.xml
+++ b/feed-client-publisher/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>feed</artifactId>
-        <groupId>no.skatteetaten.fastsetting.formueinntekt.felles.feed</groupId>
-        <version>0-SNAPSHOT</version>
+        <groupId>codes.rafael.feed</groupId>
+        <version>1.5-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -13,7 +13,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>no.skatteetaten.fastsetting.formueinntekt.felles.feed</groupId>
+            <groupId>codes.rafael.feed</groupId>
             <artifactId>feed-api</artifactId>
             <version>${project.version}</version>
         </dependency>
