--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>no.skatteetaten.fastsetting.formueinntekt.felles.feed</groupId>
+  <groupId>codes.rafael.feed</groupId>
   <artifactId>feed</artifactId>
-  <version>0-SNAPSHOT</version>
+  <version>1.5-SNAPSHOT</version>
   <packaging>pom</packaging>
+  <name>Generic feed processing for Java</name>
+  <description>This library implements persistent and consistent processing of feed data without making assumptions of a feed's structure or source. In this context a feed can represent any chain of data that can be implemented as the `FeedEndpoint` interface of the *feed-api* module.</description>
+  <url>https://github.com/raphw/skatteprosessen-feed</url>
+  <distributionManagement>
+    <repository>
+      <id>central</id>
+      <name>Nexus Release Repository</name>
+      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+    </repository>
+  </distributionManagement>
+  <scm>
+    <connection>scm:git:git://github.com/raphw/skatteprosessen-feed.git</connection>
+    <developerConnection>scm:git:git@github.com:raphw/skatteprosessen-feed.git</developerConnection>
+    <url>http://github.com/raphw/skatteprosessen-feed/tree/master</url>
+    <tag>feed-1.4</tag>
+  </scm>
+  <developers>
+    <developer>
+      <name>Rafael Winterhalter</name>
+      <email>rafael.wth@gmail.com</email>
+      <organization>Skatteetaten</organization>
+      <organizationUrl>https://rafael.codes</organizationUrl>
+    </developer>
+  </developers>
   <modules>
     <module>feed-api</module>
     <module>feed-memory</module>
@@ -88,6 +112,20 @@
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-gpg-plugin</artifactId>
+        <version>3.0.1</version>
+        <executions>
+          <execution>
+            <id>sign-artifacts</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>sign</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
         <version>3.2.1</version>
         <executions>
@@ -96,6 +134,22 @@
             <goals>
               <goal>jar</goal>
             </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>3.3.1</version>
+        <executions>
+          <execution>
+            <id>attach-javadocs</id>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+            <configuration>
+              <additionalOptions>-package</additionalOptions>
+            </configuration>
           </execution>
         </executions>
       </plugin>
