--- a/feed-client-filesystem/pom.xml
+++ b/feed-client-filesystem/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>codes.rafael.feed</groupId>
         <artifactId>feed</artifactId>
-        <version>1.5</version>
+        <version>1.6-SNAPSHOT</version>
     </parent>
 
     <artifactId>feed-client-filesystem</artifactId>
